# meg-editor

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: AboutBox.Designer.cs  AboutBox.cs  AskFormatForm.Designer.cs  AskFormatForm.cs  EncryptionKeys.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MegaFile.cs  Program.cs
src/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
